--- a/QuickFacts/Summary/templates/Summary/home.html
+++ b/QuickFacts/Summary/templates/Summary/home.html
@@ -1,30 +1,34 @@
-{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quick Link Submission</title>
+    <title>Proste Fakty</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
-    <script src="{% static 'js/scripts.js' %}"></script>
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center">Submit Your Link</h1>
+        <h1 class="text-center">Proste Fakty</h1>
+
         <form method="POST">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-primary btn-block">Submit</button>
+            <button type="submit" class="btn btn-primary btn-block">Podsumuj</button>
         </form>
 
         {% if submitted_link %}
-            <div class="mt-4 alert alert-success">
-                You submitted the link: <a href="{{ submitted_link }}" target="_blank">{{ submitted_link }}</a>
+            <div class="mt-4 alert alert-info">
+                Wstawiłeś link: <a href="{{ submitted_link }}" target="_blank">{{ submitted_link }}</a>
             </div>
         {% endif %}
+
+        {% if article_content %}
+            <h2 class="mt-5">Podsumowany artykuł:</h2>
+            <div class="mt-3">
+                <pre style="white-space: pre-wrap;">{{ summary }}</pre>  <!-- Preserves formatting of paragraphs -->
+            </div>
+        {% endif %}
+
     </div>
 </body>
 </html>
