--- a/QuickFacts/Summary/templates/base.html
+++ b/QuickFacts/Summary/templates/base.html
@@ -17,10 +17,12 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="/">O stronie</a></li>
                 </ul>
-                <!-- Dark Mode Button -->
-                <button id="dark-mode-toggle" class="btn btn-outline-light">Tryb Ciemny</button>
             </div>
-        </nav>
+            <!-- Dark Mode Button -->
+            <button id="dark-mode-toggle" class="btn btn-outline-light">
+                <img id="mode-icon" src="{% static 'images/sun-icon.svg' %}" alt="Tryb Ciemny" width="20" height="20">
+            </button>
+        </nav> 
     </header>
 
     <main class="container mt-4">
