--- a/QuickFacts/Summary/templates/Summary/home.html
+++ b/QuickFacts/Summary/templates/Summary/home.html
@@ -18,7 +18,7 @@
             </div>
         {% endif %}
 
-        {% if article_content %}
+        {% if summary %}
             <h2 class="mt-5">Podsumowany artykuł:</h2>
             <div class="mt-3">
                 <pre style="white-space: pre-wrap;">{{ summary }}</pre>  <!-- Preserves formatting of paragraphs -->
