Article Title Display

--- a/QuickFacts/Summary/templates/Summary/home.html
+++ b/QuickFacts/Summary/templates/Summary/home.html
@@ -19,7 +19,7 @@
         {% endif %}
 
         {% if summary %}
-            <h2 class="mt-5">Podsumowany artykuł:</h2>
+            <h2 class="mt-5">{{article_title}}</h2>
             <div class="mt-3">
                 <pre style="white-space: pre-wrap;">{{ summary }}</pre>  <!-- Preserves formatting of paragraphs -->
             </div>
