--- a/QuickFacts/Summary/templates/base.html
+++ b/QuickFacts/Summary/templates/base.html
@@ -15,6 +15,8 @@
             <a class="navbar-brand" href="/">Proste Fakty</a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav mr-auto">
+                    <li class="nav-item"><a class="nav-link" href="/">Podsumuj</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/">Wyszukaj</a></li>
                     <li class="nav-item"><a class="nav-link" href="/">O stronie</a></li>
                 </ul>
             </div>
