Project Structure Rework

--- a/QuickFacts/QuickFacts/templates/base.html
+++ b/QuickFacts/QuickFacts/templates/base.html
@@ -6,7 +6,7 @@
     <title>{% block title %} Proste Fakty {% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/global.css' %}">
     <script defer src="{% static 'js/darkmode.js' %}"></script>
 </head>
 <body>
