Article Search url

--- a/QuickFacts/QuickFacts/templates/base.html
+++ b/QuickFacts/QuickFacts/templates/base.html
@@ -16,7 +16,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="/">Podsumuj</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/">Wyszukaj</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/search">Wyszukaj</a></li>
                     <li class="nav-item"><a class="nav-link" href="/">O stronie</a></li>
                 </ul>
             </div>
