--- a/QuickFacts/ArticleSearch/templates/search.html
+++ b/QuickFacts/ArticleSearch/templates/search.html
@@ -2,9 +2,8 @@
 {% load static %}
 
 {% block title %} Proste Fakty {% endblock %}
-
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'ArticleSearch/css/search.css' %}">
 {% endblock %}
 
 {% block content %}
