ArticleSearch structure/NOTWORKING/

--- a/QuickFacts/ArticleSearch/templates/search.html
+++ b/QuickFacts/ArticleSearch/templates/search.html
@@ -11,9 +11,9 @@
 
         <h2 class="text-center">Wyszukaj artykuł</h2>
 
-
-
-
+        <input type="text" id="search-bar" placeholder="Wpisz tytuł artykułu...">
+        <ul id="search-results"></ul>
+        <script src="{% static 'ArticleSearch/js/scripts.js' %}"></script>
 
 
     </div>
