--- a/QuickFacts/QuickFacts/static/global/css/global.css
+++ b/QuickFacts/QuickFacts/static/global/css/global.css
@@ -27,6 +27,12 @@ header {
     width: 100%; 
 }
 
+.form-control{
+    background-color: #fff; 
+    color: #000; 
+    border: 1px solid #ced4da; 
+}
+
 h1 {
     color: #007bff;
     font-size: 4rem;
@@ -94,6 +100,15 @@ body.dark-mode #mode-icon {
 body.dark-mode .btn-primary {
     background-color: #0a2742;
     border-color: #0a2742;
+}
+
+body.dark-mode .form-control{
+    background-color: #9999998f;
+    color:#f8f9fa;
+    border:#0a2742;
+}
+body.dark-mode .form-control::placeholder{
+    color:#f8f9fab9;
 }
 
 
