--- a/QuickFacts/QuickFacts/templates/base.html
+++ b/QuickFacts/QuickFacts/templates/base.html
@@ -18,7 +18,7 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="/">Podsumuj</a></li>
                     <li class="nav-item"><a class="nav-link" href="/search">Wyszukaj</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/">O stronie</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/aboutme">O stronie</a></li>
                 </ul>
             </div>
             <!-- Dark Mode Button -->
@@ -34,7 +34,7 @@
     </main>
 
     <footer class="bg-primary text-white text-center p-3 mt-4">
-        <p>&copy; 2024 Proste Fakty</p>
+        <p>&copy; 2025 Proste Fakty</p>
     </footer>
 
     <!-- Bootstrap JS and dependencies (via CDN) -->
